Bugfix: wrap search_box_links in a navigation_list

--- a/sites/all/themes/mcneese/css/screen/screen-flow.css
+++ b/sites/all/themes/mcneese/css/screen/screen-flow.css
@@ -224,11 +224,6 @@
   border-bottom-left-radius: 5px;
 }
 
-#mcneese-header > .header-section > .header-menu > .html_tag-nav > .navigation_list > li.active-trail > a.active {
-  background-color: #fad703;
-  color: #00477f;
-}
-
 
 
 /*** Page Footer ***/
